# VectorPP

./: .gitignore  CMakeLists.txt  PRD.md  README.md  progress.txt  ralph.ps1  vcpkg.json
config/: default.json
proto/: vectordb.proto
python/: README.md
python/examples/: movie_demo.py
python/tests/: test_client.py  test_embeddings.py  test_movie_demo.py
python/vectorpp/: __init__.py  client.py  embeddings.py  vectordb_pb2.py  vectordb_pb2_grpc.py
src/: main.cpp
src/concurrency/: thread_pool.cpp  thread_pool.hpp
src/config/: config_loader.cpp  config_loader.hpp
src/core/: vector_store.cpp  vector_store.hpp
src/server/: grpc_server.cpp  grpc_server.hpp  service_impl.cpp  service_impl.hpp
src/utils/: uuid.cpp  uuid.hpp
tests/benchmark/: benchmark_search.cpp
tests/integration/: test_grpc_server.cpp
tests/unit/: test_config_loader.cpp  test_thread_pool.cpp  test_vector_store.cpp
